[gd_scene load_steps=29 format=3 uid="uid://demhff82lbtt7"]

[ext_resource type="Texture2D" uid="uid://buayg4cbwgjxq" path="res://resources/textures/spritesheet.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://bh6hu381skku1" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="PackedScene" uid="uid://bwn42fyylanlh" path="res://interactables/float-box.tscn" id="2_yw30f"]
[ext_resource type="Script" uid="uid://waxrpng8sp07" path="res://player/player-sprite.gd" id="3_g1dw6"]
[ext_resource type="PackedScene" uid="uid://crwrfnwsis7gp" path="res://player/red-projectile.tscn" id="3_qjkh3"]
[ext_resource type="AudioStream" uid="uid://car6u4h4bej6" path="res://resources/sounds/jump.wav" id="6_g6k8r"]
[ext_resource type="AudioStream" uid="uid://bxgvftcgicdys" path="res://resources/sounds/throw.wav" id="7_rgyib"]
[ext_resource type="AudioStream" uid="uid://mi3kjspwia37" path="res://resources/sounds/box-jump.wav" id="8_hg6s5"]
[ext_resource type="AudioStream" uid="uid://bcqk0mp21oiko" path="res://resources/sounds/dig.wav" id="9_hg6s5"]
[ext_resource type="AudioStream" uid="uid://b4be2r8mlk6ed" path="res://resources/sounds/explosion.wav" id="10_2ieo8"]
[ext_resource type="AudioStream" uid="uid://c07cmh55ih7mr" path="res://resources/sounds/explode-box.wav" id="11_ebec5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rkbax"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 0, 80, 128)
filter_clip = true

[sub_resource type="Animation" id="Animation_qjkh3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "airborne"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_kb6p2"]
resource_name = "box_jump"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_box_jump"
}]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "carrying_airborne"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [27]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "carrying_moving"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "carrying_standing"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [25, 26]
}

[sub_resource type="Animation" id="Animation_wodsf"]
resource_name = "digging_down"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_dig"
}, {
"args": [],
"method": &"_end_digging_animation"
}]
}

[sub_resource type="Animation" id="Animation_32hag"]
resource_name = "digging_forward"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_dig"
}, {
"args": [],
"method": &"_end_digging_animation"
}]
}

[sub_resource type="Animation" id="Animation_tqiix"]
resource_name = "digging_up"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_dig"
}, {
"args": [],
"method": &"_end_digging_animation"
}]
}

[sub_resource type="Animation" id="Animation_8t03j"]
resource_name = "lift"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [33, 34]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_free_lifted_box"
}, {
"args": [],
"method": &"_end_lift_animation"
}]
}

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "moving"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "standing"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_yllr7"]
resource_name = "throwing_airborne"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_ebec5"]
resource_name = "throwing_moving"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_2ieo8"]
resource_name = "throwing_standing"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hg6s5"]
_data = {
&"RESET": SubResource("Animation_qjkh3"),
&"airborne": SubResource("Animation_rgyib"),
&"box_jump": SubResource("Animation_kb6p2"),
&"carrying_airborne": SubResource("Animation_hg6s5"),
&"carrying_moving": SubResource("Animation_boad6"),
&"carrying_standing": SubResource("Animation_g1dw6"),
&"digging_down": SubResource("Animation_wodsf"),
&"digging_forward": SubResource("Animation_32hag"),
&"digging_up": SubResource("Animation_tqiix"),
&"lift": SubResource("Animation_8t03j"),
&"moving": SubResource("Animation_g6k8r"),
&"standing": SubResource("Animation_yw30f"),
&"throwing_airborne": SubResource("Animation_yllr7"),
&"throwing_moving": SubResource("Animation_ebec5"),
&"throwing_standing": SubResource("Animation_2ieo8")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 14
script = ExtResource("1_rkbax")
speed = 60.0
acceleration = 200.0
air_acceleration = 200.0
friction = 400.0
air_friction = 400.0
jump_speed = 160.0
box_jump_speed = 160.0
end_jump_multiplier = 0.3
coyote_jump_time = 0.15
gravity = 600.0
fall_speed = 160.0
float_fall_speed = 30.0
dig_range = Vector2(12, 20)
radius = 6
max_shards = 4
spawn_pos = Vector2(5, -3)
box_jump_spawn_pos = Vector2(2, 4)
box_spawn_vel = Vector2(100, -100)
float_box = ExtResource("2_yw30f")
red_projectile = ExtResource("3_qjkh3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-3, 5, 0, 8, 3, 5, 3, -3, -3, -3)

[node name="Pivot" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite2D" parent="Pivot"]
unique_name_in_owner = true
position = Vector2(4, 0)
texture = SubResource("AtlasTexture_rkbax")
hframes = 5
vframes = 8
script = ExtResource("3_g1dw6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_hg6s5")
}

[node name="PlatformDropTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ThrowingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g6k8r")

[node name="ThrowSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_rgyib")

[node name="BoxJumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hg6s5")

[node name="DigSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hg6s5")

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2ieo8")

[node name="BoxAboutToExplodeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ebec5")

[connection signal="facing_changed" from="." to="Pivot/PlayerSprite" method="_on_player_facing_changed"]
[connection signal="state_changed" from="." to="Pivot/PlayerSprite" method="_on_player_state_changed"]
[connection signal="timeout" from="PlatformDropTimer" to="." method="_on_platform_drop_timer_timeout"]
[connection signal="timeout" from="ThrowingTimer" to="Pivot/PlayerSprite" method="_on_throwing_timer_timeout"]
